--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -40,3 +40,32 @@ jobs:
 deploy:
     runs-on: ubuntu-20.04
     needs: build_push_image # Will wait for the execution of the previous job
+    
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Install Helm
+        uses: Azure/setup-helm@v3.3
+        with:
+          # Version of helm
+          version: v3.3.1
+          
+      - name: Get AKS Credentials
+        uses: Azure/aks-set-context@v3
+        with:
+          creds: AZURE_CREDENTIALS
+          resource-group: mslearn-gh-pipelines-10454
+          cluster-name: contoso-video
+      - name: Run Helm Deploy
+        run: |
+          helm upgrade \
+            --install \
+            --create-namespace \
+            --atomic \
+            --wait \
+            --namespace staging \
+            contoso-website \
+            ./kubernetes/contoso-website \
+            --set image.repository=${{ secrets.ACR_NAME }} \
+            --set dns.name=${{ secrets.DNS_NAME }}
+      
