--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ trigger:
 - main
 
 pool:
-  vmImage: DDL-SSO-AgentPool
+  vmImage: windows2019
+  name: DDL-SSO-AgentPool
 
 steps:
 - script: echo Hello, world!
