Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   name: 'DDL-SSO-AgentPool'  # Replace with your agent pool name
 
 steps:
-- script: |
+- powershell: |
     # Define the URL for the SqlPackage installer
     $url = "https://aka.ms/sqlpackage"
     
@@ -24,8 +24,8 @@ steps:
     # Verify installation
     & "$(System.DefaultWorkingDirectory)\SqlPackage\SqlPackage.exe" /?
   displayName: 'Install SqlPackage'
-  
-- script: |
+
+- powershell: |
     # Your subsequent steps that use SqlPackage
     & "$(System.DefaultWorkingDirectory)\SqlPackage\SqlPackage.exe" /Action:Publish /SourceFile:"path_to_your_dacpac" /TargetConnectionString:"your_connection_string"
   displayName: 'Publish DACPAC'
