--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,33 @@ pool:
 
 steps:
 - powershell: |
-    # Define the URL for the SqlPackage installer
+    # Define the URL for the SqlPackage installer (update to the latest version)
     $url = "https://aka.ms/sqlpackage"
     
     # Define the path to download the installer
     $installerPath = "$(System.DefaultWorkingDirectory)\SqlPackage.zip"
     
     # Download the SqlPackage installer
-    Invoke-WebRequest -Uri $url -OutFile $installerPath
+    try {
+        Invoke-WebRequest -Uri $url -OutFile $installerPath -ErrorAction Stop
+    } catch {
+        Write-Error "Failed to download SqlPackage: $_"
+        exit 1
+    }
+    
+    # Check if the file was downloaded successfully
+    if (-Not (Test-Path $installerPath)) {
+        Write-Error "SqlPackage.zip was not downloaded."
+        exit 1
+    }
     
     # Unzip the installer
-    Expand-Archive -Path $installerPath -DestinationPath "$(System.DefaultWorkingDirectory)\SqlPackage"
+    try {
+        Expand-Archive -Path $installerPath -DestinationPath "$(System.DefaultWorkingDirectory)\SqlPackage" -ErrorAction Stop
+    } catch {
+        Write-Error "Failed to unzip SqlPackage: $_"
+        exit 1
+    }
     
     # Add SqlPackage to the PATH
     $env:Path += ";$(System.DefaultWorkingDirectory)\SqlPackage"
