Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 steps:
 - powershell: |
     # Define the URL for the SqlPackage installer (update to the latest version)
-    $url = "https://aka.ms/sqlpackage"
+    $url = "https://go.microsoft.com/fwlink/?linkid=2316204"
     
     # Define the path to download the installer
     $installerPath = "$(System.DefaultWorkingDirectory)\SqlPackage.zip"
