Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 trigger:
+- task: SqlAzureDacpacDeployment@1
+  inputs:
+    AuthenticationType: 'connectionString'
+    ConnectionString: 'Server=tcp:ucddl-sqlserver-qa.database.windows.net,1433;Initial Catalog=UCDDLDBQA;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";'
+    deployType: 'InlineSqlTask'
+    SqlInline: 'show tables;'
+    IpDetectionMethod: 'AutoDetect'
 - main
 
 pool:
